examples/test/testpolicy16307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16307
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key24: value16
      key7: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value7
          key35: value40
          key28: value34
      podSelector:
        matchLabels:
          key6: value40
